--- a/package.json
+++ b/package.json
@@ -20,14 +20,21 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "express-messages": "^1.0.1",
+    "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
+    "handlebars": "^4.0.11",
     "moment": "^2.22.1",
     "mongodb": "^3.0.8",
     "mongoose": "^5.0.17",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   }
 }
