--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express-validator": "^5.2.0",
     "handlebars": "^4.0.11",
     "ionicons": "^4.0.0",
+    "jsonwebtoken": "^8.2.1",
+    "loadash": "^1.0.0",
     "moment": "^2.22.1",
     "mongodb": "^3.0.8",
     "mongoose": "^5.0.17",
