--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "nib": "^1.1.2",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "serve-favicon": "^2.5.0"
+    "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0",
+    "stylus": "^0.54.5"
   }
 }
